feat [User] : rest docs, test error 수정 완료